--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: May Wang
 #show_downloads: true
+logo: /pics/profile.jpg
 description: Data Scientist | CMU Alumni
 theme: jekyll-theme-minimal
