--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: May Wang
+title: May (Yun Yung) Wang
 #show_downloads: true
 logo: /pics/profile.jpg
 description: Data Scientist | CMU Alumni
